syntax = "proto3";

service GpsLocation {
	rpc Get(GetRequest) returns (GetResponse) {}
	rpc Post(PostRequest) returns (PostResponse) {}
	rpc Search(SearchRequest) returns (SearchResponse) {}
}

message GetRequest {
	string id = 1;
}

message GetResponse {
	Entity entity = 1;
}

message PostRequest {
	Entity entity = 1;
}

message PostResponse {
}

message SearchRequest {
	Point center = 1;
	double radius = 2; // in meters
	string type = 3;
	int64 numEntities = 4;
}

message SearchResponse {
	repeated Entity entities = 1;
}

message Entity {
        string id = 1;
	string type = 2;
	string name = 3;
        Point location = 4;
}

message Point {
	double latitude = 1;
	double longitude = 2;
	int64 timestamp = 3;
}